<resources>
    <string name="app_name">Bio Organic</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_shopping_cart">Shopping Cart</string>
    <string name="title_activity_favorite_list">My Favorites</string>
    <string name="title_activity_account_registration">Account Registration</string>
    <string name="title_activity_account">Account</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Elshad Seyidmammadov</string>
    <string name="nav_header_subtitle">elshadsm@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="data_content_authority">com.elshadsm.organic.bio</string>
    <string name="action_shopping_cart">Shopping Cart</string>
    <string name="action_search">Search</string>
    <string name="navigation_drawer_home">Home</string>
    <string name="navigation_drawer_my_account">My Account</string>
    <string name="navigation_drawer_shopping_cart">Shopping Cart</string>
    <string name="navigation_drawer_my_favorites">My Favorites</string>
    <string name="navigation_drawer_share">Share</string>
    <string name="navigation_drawer_sign_up">Sign Up</string>
    <string name="navigation_drawer_logout">Logout</string>

    <string name="drawer_menu_name_default_value">Name</string>
    <string name="drawer_menu_surname_default_value">Surname</string>
    <string name="drawer_menu_email_default_value">email@example.com</string>
    <string name="drawer_menu_full_name_default_value">Name Surname</string>

    <string name="favorite_list_empty_view">Your favorite list is empty</string>
    <string name="shopping_cart_empty_view">Your shopping cart is empty</string>
    <string name="product_list_empty_view">There are no products under this category</string>

    <string name="account_reg_common_label">Start a new account</string>
    <string name="account_reg_form_name">Name *</string>
    <string name="account_reg_form_surname">Surname *</string>
    <string name="account_reg_form_email">Email *</string>
    <string name="account_reg_form_country">Country *</string>
    <string name="account_reg_form_city">City *</string>
    <string name="account_reg_form_state">State *</string>
    <string name="account_reg_form_postal_code">Postal Code *</string>
    <string name="account_reg_form_photo">Select your photo</string>
    <string name="account_reg_form_photo_content_desc">TODO</string>
    <string name="account_reg_form_button">Start account</string>

    <string name="account_reg_form_name_message">Please input name</string>
    <string name="account_reg_form_surname_message">Please input surname</string>
    <string name="account_reg_form_email_message">Please input email</string>
    <string name="account_reg_form_email_message_correct">Please input correct email</string>
    <string name="account_reg_form_country_message">Please input country</string>
    <string name="account_reg_form_city_message">Please input city</string>
    <string name="account_reg_form_state_message">Please input state</string>
    <string name="account_reg_form_postal_code_message">Please input postal code</string>

    <string name="permission_denied_message">Permission Denied!</string>
    <string name="permission_needed_message">Permission Needed</string>
    <string name="rationale_message">Rationale</string>
    <string name="please_wait_message">Wait please…</string>

    <string name="image_delete_error_message">Cannot delete image from local storage</string>

    <string name="app_share_subject">Share the app</string>
    <string name="app_share_text">Use Bio-Organic App for the purchase of healthy food.</string>

    <string name="default_content_description">Content description</string>
    <string name="widget_search_input_text">I\'m shopping for…</string>

    <string name="product_details_reviews_label">Reviews</string>

    <string name="sort_action">Sort</string>
    <string name="filter_action">Filter</string>
    <string name="view_action">View</string>
    <string name="action_close_button">Close</string>
    <string name="action_done_button">Done</string>
    <string name="the_lowest_price">The lowest price</string>
    <string name="the_highest_price">The highest price</string>
    <string name="the_newest_products">The newest products</string>
    <string name="amount">Amount</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="from_to_amount_inputs_separator">-</string>
    <string name="total_amount">Total Amount</string>
    <string name="search_for">Search for…</string>

    <string name="category_foods">Foods</string>
    <string name="category_spices">Spices</string>
    <string name="category_medication">Medication</string>
    <string name="category_beauty">Beauty</string>
    <string name="category_home">Home</string>
    <string name="category_others">Others</string>

</resources>
