<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AccountRegistrationActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:padding="@dimen/size_l">

        <TextView
            android:id="@+id/main_label"
            style="@style/Form.Common.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_reg_common_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name_label"
            style="@style/Form.Input.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size"
            android:labelFor="@+id/name_input"
            android:text="@string/account_reg_form_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_label" />

        <EditText
            android:id="@+id/name_input"
            android:layout_width="@dimen/size_zero"
            android:layout_height="wrap_content"
            android:ems="@integer/form_input_ems"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_label" />

        <TextView
            android:id="@+id/name_message"
            style="@style/Form.Error.Message"
            android:layout_width="@dimen/size_zero"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_input" />

        <TextView
            android:id="@+id/surname_label"
            style="@style/Form.Input.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size"
            android:labelFor="@+id/surname_input"
            android:text="@string/account_reg_form_surname"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_message" />

        <EditText
            android:id="@+id/surname_input"
            android:layout_width="@dimen/size_zero"
            android:layout_height="wrap_content"
            android:ems="@integer/form_input_ems"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/surname_label" />

        <TextView
            android:id="@+id/surname_message"
            style="@style/Form.Error.Message"
            android:layout_width="@dimen/size_zero"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/surname_input" />


        <TextView
            android:id="@+id/email_label"
            style="@style/Form.Input.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size"
            android:labelFor="@+id/email_input"
            android:text="@string/account_reg_form_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/surname_message" />

        <EditText
            android:id="@+id/email_input"
            android:layout_width="@dimen/size_zero"
            android:layout_height="wrap_content"
            android:ems="@integer/form_input_ems"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_label" />

        <TextView
            android:id="@+id/email_message"
            style="@style/Form.Error.Message"
            android:layout_width="@dimen/size_zero"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_input" />

        <TextView
            android:id="@+id/country_label"
            style="@style/Form.Input.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size"
            android:labelFor="@+id/country_input"
            android:text="@string/account_reg_form_country"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_message" />

        <EditText
            android:id="@+id/country_input"
            android:layout_width="@dimen/size_zero"
            android:layout_height="wrap_content"
            android:ems="@integer/form_input_ems"
            android:inputType="textCapSentences"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/country_label" />

        <TextView
            android:id="@+id/country_message"
            style="@style/Form.Error.Message"
            android:layout_width="@dimen/size_zero"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/country_input" />

        <TextView
            android:id="@+id/city_label"
            style="@style/Form.Input.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size"
            android:labelFor="@+id/city_input"
            android:text="@string/account_reg_form_city"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/country_message" />

        <EditText
            android:id="@+id/city_input"
            android:layout_width="@dimen/size_zero"
            android:layout_height="wrap_content"
            android:ems="@integer/form_input_ems"
            android:inputType="textCapSentences"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/city_label" />

        <TextView
            android:id="@+id/city_message"
            style="@style/Form.Error.Message"
            android:layout_width="@dimen/size_zero"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/city_input" />

        <TextView
            android:id="@+id/state_label"
            style="@style/Form.Input.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size"
            android:labelFor="@+id/state_input"
            android:text="@string/account_reg_form_state"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/city_message" />

        <EditText
            android:id="@+id/state_input"
            android:layout_width="@dimen/size_zero"
            android:layout_height="wrap_content"
            android:ems="@integer/form_input_ems"
            android:inputType="textCapSentences"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/state_label" />

        <TextView
            android:id="@+id/state_message"
            style="@style/Form.Error.Message"
            android:layout_width="@dimen/size_zero"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/state_input" />


        <TextView
            android:id="@+id/postal_code_label"
            style="@style/Form.Input.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size"
            android:labelFor="@+id/postal_code_input"
            android:text="@string/account_reg_form_postal_code"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/state_message" />

        <EditText
            android:id="@+id/postal_code_input"
            android:layout_width="@dimen/size_zero"
            android:layout_height="wrap_content"
            android:ems="@integer/form_input_ems"
            android:inputType="textCapSentences"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/postal_code_label" />

        <TextView
            android:id="@+id/postal_code_message"
            style="@style/Form.Error.Message"
            android:layout_width="@dimen/size_zero"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/postal_code_input" />

        <ImageView
            android:id="@+id/image_icon"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginTop="@dimen/size_l"
            android:contentDescription="@string/account_reg_form_photo_content_desc"
            android:src="@drawable/ic_account_box"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/postal_code_message" />

        <TextView
            android:id="@+id/image_label"
            style="@style/Form.Input.Label"
            android:layout_width="@dimen/size_zero"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/size"
            android:text="@string/account_reg_form_photo"
            app:layout_constraintBottom_toTopOf="@+id/image_icon"
            app:layout_constraintEnd_toStartOf="@+id/image_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_icon" />

        <Button
            android:id="@+id/start_button"
            android:layout_width="@dimen/size_zero"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorAccent"
            android:text="@string/account_reg_form_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_icon" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>