<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ShoppingCartActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/shopping_cart_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_zero"
        android:clipToPadding="false"
        android:padding="@dimen/size_s"
        android:scrollbarStyle="outsideOverlay"
        app:layout_constraintBottom_toTopOf="@+id/shopping_cart_separator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/shopping_cart_empty_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_zero"
        android:gravity="center"
        android:text="@string/shopping_cart_empty_view"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/shopping_cart_separator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/shopping_cart_separator"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_xxs"
        android:layout_marginBottom="@dimen/size_l"
        android:background="@color/black_60"
        app:layout_constraintBottom_toTopOf="@+id/shopping_cart_next_operation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/shopping_cart_total_amount_label"
        style="@style/Content.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/size_l"
        android:layout_marginStart="@dimen/size_l"
        android:text="@string/total_amount"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/shopping_cart_total_amount"
        style="@style/Medium.Content.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/size_l"
        android:layout_marginEnd="@dimen/size_l"
        android:layout_marginStart="@dimen/size_l"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/shopping_cart_next_operation"
        android:layout_width="@dimen/icon_size_s"
        android:layout_height="@dimen/icon_size_s"
        android:layout_marginBottom="@dimen/size_l"
        android:layout_marginEnd="@dimen/size_l"
        android:contentDescription="@string/default_content_description"
        android:src="@drawable/ic_arrow_forward"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>